@@ -191,6 +191,7 @@ wxMSW:
 - Implemented wxMouseCaptureChangedEvent and made wxGenericDragImage check it
   has the capture before release it.
 - fixed bugs in multiple selection wxCheckListBox
+- default button handling is now closer to expected
 
 wxGTK:
 
